[JBDEPLOY-238] - Merged VFS3 branch changes into trunk -r 94634:101022
git-svn-id: http://anonsvn.jboss.org/repos/jbossas/projects/jboss-deployers/trunk@101038 84be2c1e-ba19-0410-b317-a758671a6fc1